Evol(Register, Login) Register Level I 1 ✓ 2 ✓ 3 ✓ Register Level II 4 ✓ 5 ✓ Login Level I 1 ✓ 2 ✓ 3 ✓ Login Level II 4 ✓ 5 ✓

--- a/angular/src/app/components/add-channel/add-channel.html
+++ b/angular/src/app/components/add-channel/add-channel.html
@@ -6,6 +6,7 @@
     <nz-form-item>
       <label for="name">Nom</label>
       <!-- TODO input text required -->
+      <input type="text" nz-input name="channel" [(ngModel)]="model.name" #channel="ngModel" />
     </nz-form-item>
   </form>
 </nz-modal>
