evol(Channel) Channel Level I 1. ✓ 2. ✓ Channel Level II 3. ✓ 4. 5. ✓

--- a/angular/src/app/components/add-channel/add-channel.html
+++ b/angular/src/app/components/add-channel/add-channel.html
@@ -1,4 +1,9 @@
 <button nz-button nzType="primary" (click)="show()">Add channel</button>
+
+<li *ngFor="let channel of listChannel" >
+  <a [routerLink]="[channel.id]" class="btn btn-link">{{channel.name}} <span *ngIf="isVisible">default</span> </a>
+</li>
+
 <nz-modal [(nzVisible)]="isVisible" nzTitle="Nouveau Channel" nzOkText="Ok" nzCancelText="Cancel" (nzOnOk)="save()"
   (nzOnCancel)="hide()">
 
@@ -6,7 +11,7 @@
     <nz-form-item>
       <label for="name">Nom</label>
       <!-- TODO input text required -->
-      <input type="text" nz-input name="channel" [(ngModel)]="model.name" #channel="ngModel" />
+      <input type="text" required="required" nz-input name="channel" [(ngModel)]="model.name" #channel="ngModel" />
     </nz-form-item>
   </form>
 </nz-modal>
