bug_evol(Channel) : resolutions des bug et evolution dela gestion des channels Channel Level I 1. ✓ 2. ✓ Channel Level II 3. ✓ 4. ✓ 5.

--- a/angular/src/app/components/menu/menu.html
+++ b/angular/src/app/components/menu/menu.html
@@ -1,7 +1,11 @@
 <nav>
   <add-channel></add-channel>
-  <!-- TODO itérer sur les channels -->
-  <a [routerLink]=""></a>
+  <ul>
+    <li *ngFor="let channel of channels" >
+      <!-- TODO itérer sur les channels -->
+      <a [routerLink]="[(channel.id)]" class="btn btn-link">{{channel.name}}</a>
+    </li>
+  </ul>
 </nav>
 
 <style >
@@ -14,6 +18,9 @@
   add-channel {
     border-bottom: 1px solid #eee;
 
+  }
+  li {
+    list-style-type: none;
   }
 
   a {
