--- a/angular/src/app/components/post/post.html
+++ b/angular/src/app/components/post/post.html
@@ -1,12 +1,15 @@
 <div class="header">
   <div class="user-picture">
     <!-- TODO utiliser le composant user-profile-picture -->
+    <user-profile-picture></user-profile-picture>
   </div>
   <div class="username">
     <!-- afficher le nom -->
+    <label>{{post.user.username}}</label>
 
     <div class="date">
       <!-- afficher la date avec le pipe date -->
+      <label>{{post.creationTime | date}}</label>
     </div>
   </div>
   <div class="right">
@@ -20,7 +23,7 @@
 </div>
 <div class="body">
   <pre class="message">
-    <!-- afficher le message -->
+    <label>{{post.message}}</label>
   </pre>
   <div *ngIf="post.content">
     <!-- afficher les bons composants picture-post-content, youtube-post-content ou video-post-content en fonction du type de contenu -->
@@ -30,6 +33,7 @@
   <nz-collapse [nzBordered]="false" *ngIf="post.comments && post.comments.length > 0">
     <nz-collapse-panel [nzHeader]="post.comments.length +' commentaire' + (post.comments.length > 1 ? 's' : '')">
         <!-- TODO afficher le liste des posts avec post-component -->
+        <post-comment></post-comment>
     </nz-collapse-panel>
   </nz-collapse>
 
