Evol(Post) Parser  Level I 5. ✓ 6. ✓

--- a/angular/src/app/components/post-content/picture/picture-post-content.html
+++ b/angular/src/app/components/post-content/picture/picture-post-content.html
@@ -1,5 +1,5 @@
 <!-- TODO afficher une image -->
-<img src="{{postContent.mediaUrl}}"/>
+<img src="{{postContent.value.mediaUrl}}"/>
 <style>
     img{
         width: 100%;
