--- a/angular/src/app/components/post-content/video/video-post-content.html
+++ b/angular/src/app/components/post-content/video/video-post-content.html
@@ -1,1 +1,5 @@
 <!-- TODO afficher une vidéo -->
+<video width="320" height="240" controls>
+        <source src="{{postContent.value.mediaUrl}}">
+        Your browser does not support the video tag.
+</video>
