Evol(Activités et notifications ): add Notification service & update notification-bar

--- a/angular/src/app/components/menu/menu.html
+++ b/angular/src/app/components/menu/menu.html
@@ -6,7 +6,9 @@
       <a [routerLink]="[(channel.id)]" class="btn btn-link">{{channel.name}}</a>
     </li>
   </ul>
+  <notification-bar></notification-bar>
 </nav>
+
 
 <style >
   :host {
