--- a/angular/src/app/components/post/post.html
+++ b/angular/src/app/components/post/post.html
@@ -24,11 +24,13 @@
   <pre class="message">
     <article [innerHTML]="post.message|linky"></article>
   </pre>
-  <div *ngIf="post.content">
-    <!-- afficher les bons composants picture-post-content, youtube-post-content ou video-post-content en fonction du type de contenu -->
-      <picture-post-content *ngIf="post.content.type == 'picture'" [postContent]=post.content></picture-post-content>
-      <video-post-content *ngIf="post.content.type == 'video'" [postContent]=post.content></video-post-content>
-      <youtube-post-content *ngIf="post.content.type == 'youtube'" [postContent]=post.content></youtube-post-content>
+  <div *ngIf="post.content" >
+    <div *ngFor="let content of post.content">
+      <!-- afficher les bons composants picture-post-content, youtube-post-content ou video-post-content en fonction du type de contenu -->
+      <picture-post-content *ngIf="content.type == 'picture'" [postContent]=content></picture-post-content>
+      <video-post-content *ngIf="content.type == 'video'" [postContent]=content></video-post-content>
+      <youtube-post-content *ngIf="content.type == 'youtube'" [postContent]=content></youtube-post-content>
+    </div>
   </div>
 </div>
 <div class="footer">
