Evol(Notification) View Level III 2-7. ✓

--- a/angular/src/app/components/post/post.html
+++ b/angular/src/app/components/post/post.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" id="post.id">
   <div class="user-picture">
     <!-- TODO utiliser le composant user-profile-picture -->
     <user-profile-picture [src]="post.user.pictureUrl"></user-profile-picture>
